k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kmatch-backend-dep
  labels:
    app: kmatch-backend
spec:
  selector:
    matchLabels:
      app: kmatch-backend
  template:
    metadata:
      labels:
        app: kmatch-backend
    spec:
      containers:
        - name: kmatch-backend-app
          image: gcr.io/bamboo-archery-350015/kmatch-backend-staging
          imagePullPolicy: Always
          ports:
            - name: http-server
              containerPort: 3000
      terminationGracePeriodSeconds: 30
