k8s/staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kmatch-backend-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kmatch-backend-dev-ip
  labels:
    app: kmatch-backend-service
spec:
  backend:
    serviceName: kmatch-backend-service
    servicePort: 80
